Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49470

winrt: Settings landscape orientation leads to application crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • GUI: Painting
    • None
    • Windows 10 x64
      MSVC 2013
      Nokia Lumia 920 (WinPhone 8.1)
    • WinRT
    • aecf3006bddb959795d03dd72d9c520e49713913

      Steps
      1. Set landscape to as supported orientation at appxmanifest
      2. Run your application on phone
      Expected: App runs and orientation does not change
      Actual: App crash

      Fix: Move onOrientationChanged call to initialize, because it causes calls that expects that screen is fully constructed.

        For Gerrit Dashboard: QTBUG-49470
        # Subject Branch Project Status CR V

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes