src/plugins/platforms/winrt/qwinrtscreen.cpp
@@ -507,11 +507,7 @@ QWinRTScreen::QWinRTScreen()
     hr = d->displayInformation->get_NativeOrientation(&displayOrientation);
     Q_ASSERT_SUCCEEDED(hr);
     d->nativeOrientation = static_cast<Qt::ScreenOrientation>(static_cast<int>(qtOrientationsFromNative(displayOrientation)));
-
-    // Set initial orientation & pixel density
-    onDpiChanged(Q_NULLPTR, Q_NULLPTR);
     d->orientation = d->nativeOrientation;
-    onOrientationChanged(Q_NULLPTR, Q_NULLPTR);
 
     ComPtr<IApplicationViewStatics2> applicationViewStatics;
     hr = RoGetActivationFactory(HString::MakeReference(RuntimeClass_Windows_UI_ViewManagement_ApplicationView).Get(),
@@ -757,6 +753,8 @@ void QWinRTScreen::initialize()
     Q_ASSERT_SUCCEEDED(hr);
     hr = d->displayInformation->add_DpiChanged(Callback<DisplayInformationHandler>(this, &QWinRTScreen::onDpiChanged).Get(), &d->displayTokens[&IDisplayInformation::remove_DpiChanged]);
     Q_ASSERT_SUCCEEDED(hr);
+    onDpiChanged(Q_NULLPTR, Q_NULLPTR);
+    onOrientationChanged(Q_NULLPTR, Q_NULLPTR);
     onVisibilityChanged(nullptr, nullptr);
 }
 
